fixed nav padding on mobile

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -302,7 +302,7 @@ footer {
   }
 
   .menu-item {
-    padding: 20px;
+    padding: 0.5rem 1rem;
   }
 
   .content-container {
